--- a/dependencies-get-unused-java/action.yml
+++ b/dependencies-get-unused-java/action.yml
@@ -26,7 +26,7 @@ runs:
       if: always()
       shell: bash
       run: |
-        mvn dependency:analyze-report -DignoreNonCompile=true --no-transfer-progress
+        mvn -f ${{ inputs.root_folder }}/pom.xml dependency:analyze-report -DignoreNonCompile=true --no-transfer-progress
 
     - name: Convert HTML to Markdown
       id: html2markdown
@@ -41,6 +41,9 @@ runs:
       run: |
         echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
         grep -Eiv "^.*Dependencies Report|.*Last Published|.*Built by Maven|.*©|.*\* \* \*" ${{ steps.html2markdown.outputs.markdown-file }} > maven-report-updated.md || true
+        sed -i -r 's/### Used and declared dependencies/### Used and declared dependencies\n\<details\>\<summary\>Show the list\<\/summary>\n\<p\>/g' maven-report-updated.md
+        sed -i -r 's/### Used but undeclared dependencies/\<\/p\>\n\<\/details\>\n\n### Used but undeclared dependencies\n\<details\>\<summary\>Show the list\<\/summary\>\n\<p\>/g' maven-report-updated.md
+        sed -i -r 's/### Unused but declared dependencies/\<\/p\>\n\<\/details\>\n\n### Unused but declared dependencies/g' maven-report-updated.md
         echo 'MARKDOWN_UNUSED<<EOF' >> $GITHUB_ENV
         cat maven-report-updated.md >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
@@ -53,6 +56,7 @@ runs:
         title: Maven dependency report (unused dependencies) - ${{ env.TODAY }}
         body: |
           Report from [${{ github.workflow }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+          Analysed folder: ${{ inputs.root_folder }}
           ${{ env.MARKDOWN_UNUSED }}
         assignees: ${{ inputs.default_issue_assignee }}
 
@@ -60,4 +64,4 @@ runs:
       if: always()
       shell: bash
       run: |
-        mvn dependency:analyze-duplicate --no-transfer-progress
+        mvn -f ${{ inputs.root_folder }}/pom.xml dependency:analyze-duplicate --no-transfer-progress
