--- a/publish/action.yml
+++ b/publish/action.yml
@@ -12,6 +12,10 @@ inputs:
   nexus_password:
     description: 'Nexus Password'
     required: true
+  tests_module_path:
+    description: 'Path to a folder in the repository containing a tests module to be built'
+    required: false
+    default: 'tests/jahia-module/'  
 
 runs:
   using: "composite"
@@ -35,6 +39,20 @@ runs:
     - name: Build package
       shell: bash
       run: mvn -B -s ${{ inputs.mvn_settings_filepath }} clean deploy | tee mvnLogs.txt
+
+    - name: Check if test module is present
+      id: check_test_module
+      uses: andstor/file-existence-action@v2
+      with:
+        files: "${{ inputs.tests_module_path }}pom.xml"
+
+    - name: Publish tests package (if present)
+      shell: bash
+      if: steps.check_test_module.outputs.files_exists == 'true'
+      run: |
+        ROOT_PATH=$(pwd)
+        cd ${{ inputs.tests_module_path }}
+        mvn -B -U -ntp -s $ROOT_PATH/${{ inputs.mvn_settings_filepath }} clean deploy
 
     - name: Direct link location of the Artifact
       shell: bash
