--- a/docker-images-cleanup/action.yml
+++ b/docker-images-cleanup/action.yml
@@ -36,7 +36,7 @@ runs:
         p=1
         while [[ ${p} -le ${PAGES} ]]; do
           echo "Current iteration: ${p} / ${PAGES}"
-          IMAGES=$(curl -s -H "Authorization: JWT ${TOKEN}" ${URL} | jq '.results|.[]|.digest')
+          IMAGES=$(curl -s -H "Authorization: JWT ${TOKEN}" ${URL} | jq '.results|.[]?|.digest')
           for d in ${IMAGES}
           do
             echo
@@ -64,14 +64,14 @@ runs:
         p=1
         while [[ ${p} -le ${PAGES} ]]; do
           echo "Current iteration: ${p} / ${PAGES}"
-          IMAGES=$(curl -s -H "Authorization: JWT ${TOKEN}" ${URL} | jq '.results|.[]|.digest')
+          IMAGES=$(curl -s -H "Authorization: JWT ${TOKEN}" ${URL} | jq '.results|.[]?|.digest')
           for d in ${IMAGES}
           do
             echo
             echo "Current image being stored: ${d}"
             echo '{"repository": "'${{ inputs.docker_repository }}'", "digest": '${d}'},' >> tmp.txt
             TAG_URL="https://hub.docker.com/v2/namespaces/${{ inputs.docker_org }}/repositories/${{ inputs.docker_repository }}/images/"$(eval echo ${d})"/tags"
-            TAGS=$(curl -s -H "Authorization: JWT ${TOKEN}" -H "Content-Type: application/json" "${TAG_URL}" | jq '.results|.[]|.tag')
+            TAGS=$(curl -s -H "Authorization: JWT ${TOKEN}" -H "Content-Type: application/json" "${TAG_URL}" | jq '.results|.[]?|.tag')
             echo '{"repository": "'${{ inputs.docker_repository }}'", "digest": '${d}', "warning": "current_tag", "tags": [' >> tmp_tags.txt
             for t in ${TAGS}
             do
