--- a/publish/action.yml
+++ b/publish/action.yml
@@ -38,7 +38,7 @@ runs:
 
     - name: Build package
       shell: bash
-      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} clean deploy | tee mvnLogs.txt
+      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} clean deploy -Dmaven.resolver.transport=wagon | tee mvnLogs.txt
 
     - name: Check if test module is present
       id: check_test_module
@@ -52,7 +52,7 @@ runs:
       run: |
         ROOT_PATH=$(pwd)
         cd ${{ inputs.tests_module_path }}
-        mvn -B -U -ntp -s $ROOT_PATH/${{ inputs.mvn_settings_filepath }} clean deploy
+        mvn -B -U -ntp -s $ROOT_PATH/${{ inputs.mvn_settings_filepath }} clean deploy -Dmaven.resolver.transport=wagon 
 
     - name: Direct link location of the Artifact
       shell: bash
