--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -121,14 +121,9 @@ runs:
         echo "Pull request number: ${{ inputs.github_pr_id }}"
         if [[ ! -z "${{ inputs.github_pr_id }}" ]]; then
           echo "Skipping OWASP for PR analysis"
-        elif [[ ${{ steps.extract_branch.outputs.branch }} == ${{ inputs.primary_release_branch }} ]]; then
-          echo "Executing an OWASP analysis on the main branch"
-          mvn -B -s ${{ inputs.mvn_settings_filepath }} org.owasp:dependency-check-maven:8.2.1:aggregate \
-            $SONAR_PARAMS
         else
-          echo "Executing an OWASP analysis on branch: $GITHUB_REF"
+          echo "Executing an OWASP analysis on branch: ${{ inputs.primary_release_branch }}"
           mvn -B -s ${{ inputs.mvn_settings_filepath }} org.owasp:dependency-check-maven:8.2.1:aggregate \
-            -Dsonar.branch.name=$GITHUB_REF \
             $SONAR_PARAMS
         fi
 
