TECH-1019: Move jq install onto shell script

--- a/sbom-handling/action.yml
+++ b/sbom-handling/action.yml
@@ -36,13 +36,11 @@ runs:
       with:
         name: ${{ inputs.sbom_artifacts }}
 
-    - name: Setup jq
-      uses: vegardit/gha-setup-jq@v1
-
     - name: Merge sbom
       shell: bash
       run: |
           find . \( -name "*.cdx.json" -o -name "*bom.json" \) -exec cyclonedx merge --output-file sbom-all.cdx.json --input-files "{}" +
+          apt-get update && apt-get install -y jq
           jq '. |
           {
             "bomFormat": .bomFormat,
