TECH-1019: Use different default repository name (without owner)

--- a/sbom-handling/action.yml
+++ b/sbom-handling/action.yml
@@ -11,7 +11,7 @@ inputs:
   dependencytrack_projectname:
     description: 'Name of the project in Dependency Track'
     required: false
-    default: ${{ github.repository }}
+    default: ${{ github.event.repository.name }}
   dependencytrack_projectversion:
     description: 'Version of the project in Dependency Track'
     required: false
