--- a/sbom-handling/action.yml
+++ b/sbom-handling/action.yml
@@ -58,16 +58,16 @@ runs:
           }' "sbom-all.cdx.json" > sbom-all.cdx.json.tmp && mv sbom-all.cdx.json.tmp sbom-all.cdx.json
           cyclonedx validate --input-version v1_4 --input-file sbom-all.cdx.json
           
-    - name: Upload merged sbom
+    - name: Upload sbom
       uses: actions/upload-artifact@v3
       with:
-        name: merged-sbom
+        name: sbom
         path: |
           sbom-all.cdx.json
         retention-days: 2
           
     - name: Upload sbom to Dependency Track
-      uses: DependencyTrack/gh-upload-sbom@v1.0.0
+      uses: DependencyTrack/gh-upload-sbom@v2.0.0
       with:
           bomfilename: sbom-all.cdx.json
           serverhostname: ${{ inputs.dependencytrack_url }}
@@ -75,3 +75,8 @@ runs:
           autocreate: true
           projectname: ${{ inputs.dependencytrack_projectname }}
           projectversion: ${{ inputs.dependencytrack_projectversion }}
+          
+    - name: Show direct link to Dependency Track
+      shell: bash
+      run: |
+        echo "::notice title=Dependency Track location::SBOM has been uploaded to: ${{ inputs.dependencytrack_url }} Project name: ${{ inputs.dependencytrack_projectname }}"
