TECH-1019: Add logging

--- a/sbom-handling/action.yml
+++ b/sbom-handling/action.yml
@@ -65,19 +65,19 @@ runs:
         path: |
           sbom-all.cdx.json
         retention-days: 2
+
+    - name: Show direct link to Dependency Track
+      shell: bash
+      run: |
+        echo "::notice title=Dependency Track location::SBOM has been uploaded to: ${{ inputs.dependencytrack_apikey }}https://${{ inputs.dependencytrack_hostname }} Project name: ${{ inputs.dependencytrack_projectname }} version: ${{ inputs.dependencytrack_projectversion }}"
           
     - name: Upload sbom to Dependency Track
       uses: DependencyTrack/gh-upload-sbom@v2.0.0
       with:
           bomfilename: sbom-all.cdx.json
           serverhostname: ${{ inputs.dependencytrack_hostname }}
-          port: null
           apikey: ${{ inputs.dependencytrack_apikey }}
           autocreate: true
           projectname: ${{ inputs.dependencytrack_projectname }}
           projectversion: ${{ inputs.dependencytrack_projectversion }}
-          
-    - name: Show direct link to Dependency Track
-      shell: bash
-      run: |
-        echo "::notice title=Dependency Track location::SBOM has been uploaded to: ${{ inputs.dependencytrack_hostname }} Project name: ${{ inputs.dependencytrack_projectname }}"
+        
