--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -14,6 +14,14 @@ runs:
   using: 'composite'
   steps:
 
+    - name: Install jq
+      shell: bash
+      run: sudo apt-get install jq
+
+    - name: Get package.json infos
+      shell: bash
+      run: echo "MODULE_NAME = $(jq 'name' package.json)" >> $GITHUB_ENV
+
     - name: Prepare the module
       shell: bash
       run: yarn
@@ -32,10 +40,7 @@ runs:
       with:
         name: build-artifacts
         path: |
-          target/*
-          ./*/target/*
-          **/*source-release.zip
-          !${{ inputs.tests_module_path }}*
+          ./${{ env.MODULE_NAME }}.tgz
         retention-days: ${{ inputs.github_artifact_retention }}
 
     - name: Keep session opened if /tmp/debug file is present
